<resources>
    <string name="app_name">RestOffOwner</string>
    <string name="title_activity_slpash_screen">SlpashScreen</string>
    <string name="email">Enter Email Address</string>
    <string name="password">Enter Password</string>
    <string name="singup">SingUp</string>
    <string name="btn_forgot_password">Forgot Your Password?</string>
    <string name="btn_link_to_login">Already Registered. Login Me!</string>
    <string name="login">Login</string>
    <string name="newuser">New Registration,Click Here!</string>
    <string name="minimum_password">Worong Password</string>
    <string name="logout">Logout</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="someinfo">We just need your registered Email Id to send </string>
    <string name="someinfo1">you password reset instructions. </string>
    <string name="resetpass">Reset Passwprd</string>
    <string name="setting">Setting</string>
    <string name="registration">Registration</string>
    <string name="username">Enter Name</string>
    <string name="storeAddress">Store Address</string>
    <string name="updateprofile">Updaate Profile</string>
    <string name="setprofile">Set Profile</string>
    <string name="menuname">Add Menu</string>
    <string name="categoryname">Enter Category name</string>
    <string name="additeam">Add Iteam</string>
    <string name="category">Add Category</string>
    <string name="addmenu">Add Menu</string>
    <string name="iteamname">Add iteam name</string>
    <string name="description">Add Descrption</string>
    <string name="pice">Add Price</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="storeemail">Enter Store</string>
    <string name="storedes">Store Description</string>
    <string name="storename">Enter store name</string>
</resources>
