<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/menuname"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/addmenuitramdialog_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_shap"
        android:hint="@string/categoryname"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
        />

    <Button
        android:id="@+id/addmenuitramdialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/color_shape"
        android:text="@string/additeam"

        android:textColor="@color/white" />

</LinearLayout>