<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_loginactivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">
        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/transperantlogo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"
            android:fontFamily="serif"
            android:textStyle="bold|italic"
            android:text="@string/login"/>
    </LinearLayout>

    <EditText
        android:id="@+id/User_loginScreen_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:background="@drawable/edittext_shap"
        android:padding="10dp"

        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/User_loginScreen_pass_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:background="@drawable/edittext_shap"
        android:padding="10dp"

        android:inputType="textPassword"/>
    <Button
        android:id="@+id/User_loginScreen_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/color_shape"
        android:layout_margin="20dp"
        android:textColor="@color/white"
       />

    <Button
        android:id="@+id/User_loginScreen_forgot_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/User_loginScreen_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/newuser"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp" />


</LinearLayout>