<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword_Activity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">
        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/transperantlogo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"
            android:fontFamily="serif"
            android:textStyle="bold|italic"
            android:text="@string/lbl_forgot_password"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/white"
        android:fontFamily="serif"
        android:textStyle="bold|italic"
        android:text="@string/someinfo"
        android:textSize="16dp"
        android:layout_marginBottom="10dp"/>

    </LinearLayout>
    <EditText
        android:id="@+id/ForgotpasssScreen_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_shap"
        />
    <Button
        android:id="@+id/ForgotpasssScreen_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetpass"
        android:textColor="@color/white"
        android:background="@drawable/color_shape"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>



</LinearLayout>