<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >
        <ImageView
            android:id="@+id/horizontalsubrowimage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/horizontalsubrowtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/app_name"
            android:padding="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/horizontalsubrowupdate"
                android:layout_weight="1"
                android:text="@string/update"
                android:background="@drawable/round_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                />
            <Button
                android:id="@+id/horizontalsubrowdelete"
                android:layout_weight="1"
                android:text="@string/delete"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:background="@drawable/round_shape"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>